--- a/templates/blog.jinja
+++ b/templates/blog.jinja
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>Home page</title>
+    <title>Blog page</title>
     <meta content="" name="author" />
     <meta content="" name="description" />
     <meta content="" name="keywords" />
@@ -15,53 +15,50 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../assets/css/app.css" />
-    <script src="../assets/js/app.js" defer></script>
+    <link rel="stylesheet" href="/assets/css/app.css" />
+    <script src="/assets/js/app.js" defer></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <img class="navbar-brand" src="../assets/img/Layer.png" alt="" />
       <ul class="navbar-nav mr-auto">
         <li class="nav-item d-flex align-items-center">
-          <a class="nav-link" href="../index.html">
+          <a class="nav-link" href="/">
             <span class="menu__subtitle">Home</span>
           </a>
         </li>
         <li class="nav-item d-flex align-items-center">
-          <a class="nav-link" href="../message.html">
-            <span class="menu__subtitle">Contact</span>
+          <a class="nav-link" href="/message">
+            <span class="menu__subtitle">Message</span>
           </a>
         </li>
         <li class="nav-item active d-flex align-items-center">
-          <a class="nav-link" href="./blog.html">
+          <a class="nav-link" href="/blog">
             <span class="menu__subtitle">Blog</span>
           </a>
         </li>
       </ul>
     </nav>
-    <!-- ... -->
-
-<main role="main" class="container">
-  <div class="row">
-    <div class="col-md-8 blog-main">
-          <!--      blog start-->
-      {% for record in blogs %}
-      <div class="blog-post">
-        <h2 class="blog-post-title">{{record.title}}</h2>
-        <p class="blog-post-meta">{{record.date}} by <a href="#">{{record.author}}</a></p>
-        <p>
-          {{record.text}}
-        </p>
+    <main role="main" class="container">
+      {% if message %}
+        <h3>{{ message }}</h3>
+      {% endif %}
+      <div class="row">
+        <div class="col-md-8 blog-main">
+          <!-- block blog-post -->
+          {% for blog in blogs %}
+          <div class="blog-post">
+            <h2 class="blog-post-title">{{ blog.title }}</h2>
+            <p class="blog-post-meta">{{ blog.date }} by <a href="#">{{ blog.author }}</a></p>
+            <p>
+              {{ blog.text }}
+            </p>
+          </div>
+          {% endfor %}
+          <!-- end block blog-post -->
+        </div>
+        <!-- /.blog-main -->
       </div>
-      {% endfor %}
-      <!-- /.blog-post -->
-    </div>
-    <!-- /.blog-main -->
-  </div>
-  <!-- /.row -->
-</main>
-
-<!-- ... -->
-
+    </main>
   </body>
 </html>
